# todo_manager

./: .cursorrules  .env.example  .flake8  .flaskenv  .gitignore  .pre-commit-config.yaml  .pylintrc  =1.7  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION.md  LICENSE  Makefile  README.md  alembic.ini  architectural_overview.md  cursor_memory_bank.md  find_unused_files.py  flask_app.py  implementation_fixes.md  integration_plan.md  local_setup.md  openai_module.py  pyproject.toml  requirements-dev.txt  requirements.txt  reset_db.sql  setup.py  task_management_plan.md  task_provider_design.md  test.py
ai/: openai_module.py
app/: __init__.py  flask_app.py  lint.sh
app/ai/: openai_provider.py  schedule_generator.py
app/auth/: authentication_service.py
app/database/: calendar_account.py  user.py  user_manager.py
app/meetings/: google_calendar_provider.py  meetings_routes.py
app/schedule/: schedule_routes.py
app/tasks/: google_task_provider.py  outlook_task_provider.py
app/templates/: base.html  close_popup.html  meetings.html  new_user.html  privacy.html  settings.html  task_sync_results.html  tos.html
app/utils/: logger.py  virtualassistant-lakeland_pythonanywhere_com_wsgi.py
assets/: auth_instructions.html
database/: database_module.py  todoist_module.py
docs/plans/: 2026-03-07-ai-chatbot-design.md  2026-03-07-ai-chatbot-implementation.md
meetings/: calendar_manager.py  calendar_provider.py  google_calendar_provider.py  meetings_routes.py  o365_calendar_provider.py
memory-bank/: activeContext.md  external_account_refactor.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
migrations/: alembic.ini  env.py
migrations/versions/: 1dbca46bc9be_initial_migration_with_consolidated_.py  1f3226b41e1b_add_llm_model_column_to_user.py  460449018edf_add_schedule_slot_duration_to_user_model.py  4ff2bff41a0d_add_task_model_and_remove_taskorder.py  53b5220d3727_update_calendar_account_unique_.py  5a3b7c8d2f1e_create_external_account_and_refactor_calendar_account.py  8ddb0a51cf89_initial_migration_with_uuid_ids.py  97bcd9b1ee24_add_calendar_accounts_table.py  aa922a3945d8_add_conversation_and_chat_message_tables.py  add_app_user_email_column.py  add_foreign_key_to_calendar_account.py  add_is_primary_to_calendar_account.py  add_needs_reauth.py  afa448aca65a_rename_openai_key_to_llm_api_key_and_.py  create_user_table.py  d48024de5506_add_ai_instructions_to_user_model.py  d661bc6e8631_add_user_id_foreign_key_to_calendar_.py  d8e786a944dd_initial_migration_based_on_current_.py  e3f0ffa1011c_initial_migration_based_on_current_.py  f9a48064d88e_add_is_primary_flag_to_taskaccount.py  rename_email_to_app_login.py  rename_email_to_calendar_email.py
oneoff/: check_alembic.py  check_calendar_accounts.py  check_schema.py  check_tables.py  test_db_connection.py  test_o365.py
tests/: conftest.py  test_chat_models.py  test_chat_routes.py  test_chat_tools.py
utils/: logger.py  settings.py  user_manager.py  virtualassistant-lakeland_pythonanywhere_com_wsgi.py
virtual_assistant/: __init__.py  architecture.txt  db_setup.py  flask_app.py  initial_setup.py  new_user.py  set_todoist_token.py  test_import.py  test_todoist.py
virtual_assistant/ai/: ai_manager.py  ai_module.py  ai_provider.py  auth_routes.py  grok_provider.py  openai_module.py  openai_provider.py  schedule_generator.py
virtual_assistant/assets/: auth_instructions.html  authenticate_email.html  base.html  config.html  index.html  integrate_with_third_party_apps.html  login.html  manage_calendar_accounts.html  meetings.html  openai_setup.html  privacy.html  redirect.html  settings.html  task_sync_results.html  tasks.html  todoist_setup.html
virtual_assistant/auth/: auth_provider.py  authentication_service.py  google_auth.py  user.py  user_auth.py  user_manager.py
virtual_assistant/chat/: chat_routes.py  models.py  tools.py
virtual_assistant/data/: virtual_assistant.db  virtual_assistant.db.20250404
virtual_assistant/database/: base.py  calendar_account.py  database.py  database_module.py  database_routes.py  external_account.py  task.py  todoist_module.py  user.py  user_manager.py  user_storage.py
(+49 files in other folders)
