[tool.poetry]
name = "virtual_assistant"
version = "0.1.0"
description = "Virtual Calendar Assistant"
authors = ["Corrin Lakeland <lakeland@gmail.com>"]
license = "PRIVATE"
readme = "README.md"
packages = [
    { include = "virtual_assistant", from = "." }
]
include = ["**/pyproject.toml"]
package-mode = true


[tool.poetry.dependencies]
python = "^3.12"
openai = "*"
O365 = "*"
Flask = "*"
python-dotenv = "*"
httpx = "*"
google-api-python-client = "*"
google-auth-oauthlib = "*"
Jinja2 = "*"
Flask-SQLAlchemy = "*"
Authlib = "*"
flask-migrate = "*"
todoist-api-python = "*"
msal = "*"
flask-login = "*"
msgraph-sdk = "^1.24.0"
msgraph-core = "^1.3.2"
azure-identity = "^1.21.0"
asgiref = "^3.8.1"
pymysql = "^1.1.1"
litellm = "^1.82.0"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
pylint = "*"
isort = "*"
black = "*"
pre-commit = "*"
pytest = "*"
pytest-playwright = "*"
playwright = "*"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
