[tool.poetry]
name = "virtual_assistant"
version = "0.1.0"
description = "Aligned - intelligent task and calendar management assistant"
authors = ["Corrin Lakeland <lakeland@gmail.com>"]
license = "PRIVATE"
readme = "README.md"
packages = [
    { include = "virtual_assistant", from = "." }
]
include = ["**/pyproject.toml"]
package-mode = true


[tool.poetry.dependencies]
python = "^3.12"
openai = "*"
O365 = "*"
Flask = "*"
python-dotenv = "*"
httpx = "*"
google-api-python-client = "*"
google-auth-oauthlib = "*"
Jinja2 = "*"
Flask-SQLAlchemy = "*"
Authlib = "*"
flask-migrate = "*"
todoist-api-python = "*"
msal = "*"
flask-login = "*"
msgraph-sdk = "^1.55.0"
msgraph-core = "^1.3.8"
azure-identity = "^1.25.2"
asgiref = "^3.11.1"
pymysql = "^1.1.1"
litellm = "^1.82.0"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
pylint = "*"
isort = "*"
black = "*"
pre-commit = "*"
pytest = "*"
pytest-playwright = "*"
playwright = "*"
mypy = "^1.19.1"
sqlalchemy = {extras = ["mypy"], version = "^2.0.48"}
types-requests = "^2.32.4.20260107"

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.main]
load-plugins = []

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
disable = [
    "logging-fstring-interpolation",
    "duplicate-code",
    "missing-module-docstring",
    "missing-function-docstring",
]

[tool.pylint.typecheck]
# Google API client uses dynamic attributes (e.g., service.events())
generated-members = ["events"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
